feat: improve file management in WorkspaceFileSelector